Added checkboxes to add/remove letters, numbers and special characters to generated password. Also already styled a bit

--- a/css/index.css
+++ b/css/index.css
@@ -44,3 +44,9 @@ main {
   outline: none;
   accent-color: rgb(84, 82, 173);
 }
+
+#checkboxes {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
