Added bottom margin to the password length slider

--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,10 @@ main {
   margin-bottom: 1.5rem;
 }
 
+#slider-div {
+  margin-bottom: 1.5rem;
+}
+
 #slider-div div {
   display: flex;
   justify-content: space-between;
