--- a/css/index.css
+++ b/css/index.css
@@ -17,19 +17,29 @@ main {
 
 #content {
   width: 600px;
-  height: 400px;
+  min-height: 400px;
   border-radius: 0.7rem;
   background-color: rgb(46, 61, 83);
   padding: 1.5rem;
 }
 
 #password-output {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  box-sizing: border-box;
   width: 100%;
-  height: 75px;
+  min-height: 75px;
   border: 1px solid rgb(33, 44, 59);
   border-radius: 0.7rem;
   background-color: rgb(52, 69, 94);
   margin-bottom: 1.5rem;
+}
+
+#password-output {
+  word-break: break-all;
+  white-space: normal;
 }
 
 #slider-div {
@@ -39,6 +49,7 @@ main {
 #slider-div div {
   display: flex;
   justify-content: space-between;
+  gap: 10px;
 }
 
 #password-length-slider {
